2011-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot: Do not provide default type
	for categories.

2011-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/ncomp.boot: Fix handling of untyped definitions.

2011-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/daase.lisp: Do not mangle 0.

2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/spad.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.


2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/property.lisp, src/interp/preparse.lisp
	src/interp/macros.lisp: Eliminate use of REPEAT and
	COLLECT form Lisp files.


2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in: Use bootsys to compile .boot files.

2011-04-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/*: Make Shoe compatible.
	src/boot/typrops.boot: Use old Boot semantics for 'in'
	src/boot/compiled/typrops.clisp: Update.


2011-04-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet: Avoid deep recursion in concat.

2011-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffcg.spad.pamphlet: Speed up FFCGP.

2011-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix handling of FROMTO message.
	* src/interp/msg.boot: insertPos(): Fix thinko.  Handle insert at end.

2011-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/union.lisp: Remove (was unused after previous change).

2011-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun-l.lisp: remove, move content to
	src/interp/sfsfun.boot, convert to Boot.
	src/interp/sfsfun.boot: Rename exported functions.
	src/algebra/mkfunc.spad.pamphlet,
	src/algebra/special.spad.pamphlet,
	src/algebra/sf.spad.pamphlet,
	src/algebra/gaussian.spad.pamphlet: Adjust.
	* src/interp/bits.lisp, src/interp/hash.lisp: remove,
	move content to src/interp/vmlisp.lisp.