@@ -1,5 +1,10 @@
 2011-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/setq.lisp, src/interp/spad.lisp:
+	Avoid bogus initialization of $CategoryFrame.
+
+2011-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/define.boot: Do not provide default type
 	for categories.
 
